second commit: banner and first container done

--- a/capstone.html
+++ b/capstone.html
@@ -9,17 +9,30 @@
     <!--header-->
     <div class="header">
       <div class="container">
-        <img src="assets/images/ic-logo.svg" alt="logo"/>
-        <span>COLMARACADEMY</span>
+        <img id="logo" src="assets/images/ic-logo.svg" alt="logo"/>
+        <span id="title"><em>COLMAR</em>ACADEMY</span>
       </div>
-    <!--nav bar-->
+      <!--nav bar-->
       <div class="navbar">
-        <span>On campus</span>
-        <span>Online</span>
-        <span>For companies</span>
-        <span>Sign in</span>
-      </nav>
+        <span><a href="#"></a>On campus</span>
+        <span><a href="#"></a>Online</span>
+        <span><a href="#"></a>For companies</span>
+        <span><a href="#"></a>Sign in</span>
       </div>
+    </div>
+    <!-- "get started" container -->
+    <div class="jumbotron">
+      <div class="banner">
+        <img src="assets/images/banner.jpg" alt="students engages in reading">
+      </div>
+      <div class="start-info">
+        <h2>Learn something<br>new everyday</h2><br>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3><br><br>
+        <div class="start-container">
+          <span><a href="#"></a>Start here</span>
+        </div>
+      </div>
+
     </div>
     </header>
 
