--- a/capstone.html
+++ b/capstone.html
@@ -4,37 +4,180 @@
     <title>Colmar</title>
     <link rel="stylesheet" href="resources/css/style.css" style="text/css">
     <link rel="stylesheet" href="resources/css/reset.css" style="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   </head>
   <body>
     <!--header-->
-    <div class="header">
+    <header class="header">
       <div class="container">
         <img id="logo" src="assets/images/ic-logo.svg" alt="logo"/>
         <span id="title"><em>COLMAR</em>ACADEMY</span>
       </div>
       <!--nav bar-->
       <div class="navbar">
-        <span><a href="#"></a>On campus</span>
-        <span><a href="#"></a>Online</span>
-        <span><a href="#"></a>For companies</span>
-        <span><a href="#"></a>Sign in</span>
+        <span><a href="#oncampus.html"></a>On campus</span>
+        <span><a href="#online.html"></a>Online</span>
+        <span><a href="#forcompanies.html"></a>For companies</span>
+        <span><a href="#signin.html"></a>Sign in</span>
       </div>
-    </div>
-    <!-- "get started" container -->
+    </header>
+    <!-- "get started" first container -->
     <div class="jumbotron">
       <div class="banner">
         <img src="assets/images/banner.jpg" alt="students engages in reading">
       </div>
       <div class="start-info">
         <h2>Learn something<br>new everyday</h2><br>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3><br><br>
+        <h3>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</h3><br><br>
         <div class="start-container">
           <span><a href="#"></a>Start here</span>
         </div>
       </div>
+    </div>
+    <!--"keep practicing" second container-->
+    <div id="secondcontainer">
+      <div class="leftcontainer">
+        <div class="banner">
+          <img src="assets/images/information-main.jpg" alt="man reading book">
+        </div>
+        <div class="main-info">
+          <h2>It doesn't hurt to keep practicing</h2><br>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, <br> nect consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p><br>
+          <h6>Emanuel, Sr Strategist at Hiring.com</h6>
+        </div>
+      </div>
+      <div class="rightcontainer">
+        <div class="top">
+          <div class="image">
+            <img src="assets/images/information-orientation.jpg" alt="people walking to an orientation">
+          </div>
+          <div class="information">
+            <h5>Orientation Date</h5>
+            <h6 class="middle-line">Tue 10/11 & Wed 10/12: 8am-3pm</h6>
+            <h6><a id="link-color" href="#"></a>Read more</h6>
+          </div>
+        </div>
+        <div class="middle">
+          <div class="image">
+            <img src="assets/images/information-campus.jpg" alt="picture of a room within campus">
+          </div>
+          <div class="information">
+            <h5>Our campus</h5>
+            <h6 class="middle-line">Find which campus is close by you</h6>
+            <h6><a id="link-color" href="#"></a>Read more</h6>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="image">
+            <img src="assets/images/information-guest-lecture.jpg" alt="man with beard interestingly looking into distance">
+          </div>
+          <div class="information">
+            <h5>Our guest lecture</h5>
+            <h6 class="middle-line"><em>Join a keynote with Oliver Sack about music in medical treatment<em><h6><br>
+            <h6><a id="link-color" href="#"></a>Read more</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- "start learning" third container-->
+    <div class="thirdcontainer">
+      <h1>Start learning</h1>
+      <div id="sixmajors">
+        <div id="container" id="topthree" class="software">
+          <div class="image">
+            <img src="assets/images/course-software.jpg" alt="software and computers">
+          </div>
+          <div class="info">
+            <h5>Software engineering</h5><br>
+            <p>COURSES</p><br>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+        </div>
+        <div id="container" id="topthree" class="computer-art">
+          <div class="image">
+            <img src="assets/images/course-computer-art.jpg" alt="cell phone and coffee on table">
+          </div>
+          <div class="info">
+            <h5>Computer art</h5><br>
+            <p>COURSES</p><br>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects,<br> Computer Animation</p>
+          </div>
+        </div>
+        <div id="container" id="topthree" class="design">
+          <div class="image">
+            <img src="assets/images/course-design.jpg" alt="photographer adjusting lens">
+          </div>
+          <div class="info">
+            <h5>Design</h5><br>
+            <p>COURSES</p><br>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+        </div>
+        <div id="container" class="data">
+          <div class="image">
+            <img src="assets/images/course-data.jpg" alt="laptop with graphs displayed">
+          </div>
+          <div class="info">
+            <h5>Data</h5><br>
+            <p>COURSES</p><br>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+        </div>
+        <div id="container" class="business">
+          <div class="image">
+            <img src="assets/images/course-business.jpg" alt="chess pieces on chessboard">
+          </div>
+          <div class="info">
+            <h5>Business</h5><br>
+            <p>COURSES</p><br>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+        </div>
+        <div id="container" class="marketing">
+          <div class="image">
+            <img src="assets/images/course-marketing.jpg" alt="person adjusting settings on iWatch">
+          </div>
+          <div class="info">
+            <h5>Marketing</h5><br>
+            <p>COURSES</p><br>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- "Thesis exhibit" fourth container -->
+    <div id="fourthcontainer">
+      <h1>Thesis exhibit</h1>
+      <div class="leftcontainer">
+        <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+
+        </video>
+        <div class="info">
+          <h5>Reimagine urban</h5>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>nect consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>eget magna laoreet, efficitur dolor consequat, tristique ligula."</p><br>
+        </div>
+      </div>
+      <div class="rightcontainer">
+        <div class="thesis-info">
+          <img src="assets/images/thesis-fisma.jpg" alt="sketching ideas with paper and iphone">
+          <h5>Fisma: Design and Prototpye</h5>
+          <p>Designer showcase of new prototype product</p>
+        </div>
+        <div class="now-and-then">
+          <img src="assets/images/thesis-now-and-then.jpg" alt="empire state building">
+          <h5>Now and then</h5>
+          <p>Research study about New York</p>
+        </div>
+      </div>
+    </div>
+    <!-- footer -->
+    <div class="footer">
+      <span>© 2016 Colmar Academy. All rights reserved</span>
+      <div class="float-right">
+        <span>Terms</span>
+        <span>Privacy</span>
+      </div>
 
     </div>
-    </header>
-
   </body>
 </html>
