--- a/capstone.html
+++ b/capstone.html
@@ -146,29 +146,38 @@
       </div>
     </div>
     <!-- "Thesis exhibit" fourth container -->
-    <div id="fourthcontainer">
+    <div class="fourthcontainer">
       <h1>Thesis exhibit</h1>
-      <div class="leftcontainer">
-        <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+      <div class="flex-row">
+        <div id="leftcontainer" class="leftcontainer">
+          <video src="assets/videos/thesis.mp4" autoplay poster="posterimage.jpg"></video>
+          <div class="info">
+            <h5>Reimagine urban</h5>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>nect consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>eget magna laoreet, efficitur dolor consequat, tristique ligula."</p><br>
+          </div>
+        </div>
+        <div id="rightcontainer">
+          <div class="top">
+            <div class="thesis-info">
+              <img src="assets/images/thesis-fisma.jpg" alt="sketching ideas with paper and iphone">
+            </div>
+            <div class="information backgroundcolorgray">
+              <h5>Fisma: Design and Prototpye</h5>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="bottom">
+            <div class="now-and-then">
+              <img src="assets/images/thesis-now-and-then.jpg" alt="empire state building">
+            </div>
+            <div class="information backgroundcolorwhite">
+              <h5>Now and then</h5>
+              <p>Research study about New York</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        </video>
-        <div class="info">
-          <h5>Reimagine urban</h5>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>nect consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>eget magna laoreet, efficitur dolor consequat, tristique ligula."</p><br>
-        </div>
-      </div>
-      <div class="rightcontainer">
-        <div class="thesis-info">
-          <img src="assets/images/thesis-fisma.jpg" alt="sketching ideas with paper and iphone">
-          <h5>Fisma: Design and Prototpye</h5>
-          <p>Designer showcase of new prototype product</p>
-        </div>
-        <div class="now-and-then">
-          <img src="assets/images/thesis-now-and-then.jpg" alt="empire state building">
-          <h5>Now and then</h5>
-          <p>Research study about New York</p>
-        </div>
-      </div>
     </div>
     <!-- footer -->
     <div class="footer">
