Began media queries

--- a/capstone.html
+++ b/capstone.html
@@ -10,11 +10,15 @@
     <!--header-->
     <header class="header">
       <div class="container">
-        <img id="logo" src="assets/images/ic-logo.svg" alt="logo"/>
-        <span id="title"><em>COLMAR</em>ACADEMY</span>
+        <img class="logo" src="assets/images/ic-logo.svg" alt="logo"/>
+        <!-- query logos -->
+        <img id="hide-logos" class="querylogos" src="assets/images/ic-on-campus.svg" alt="campus logo">
+        <img id="hide-logos" class="querylogos" src="assets/images/ic-online.svg" alt="online logo">
+        <img id="hide-logos" class="querylogos" src="assets/images/ic-login.svg" alt="login logo">
+        <span id="hide-content" class="title"><em>COLMAR</em>ACADEMY</span>
       </div>
       <!--nav bar-->
-      <div class="navbar">
+      <div id="hide-content" class="navbar">
         <span><a href="#oncampus.html"></a>On campus</span>
         <span><a href="#online.html"></a>Online</span>
         <span><a href="#forcompanies.html"></a>For companies</span>
@@ -36,7 +40,7 @@
     </div>
     <!--"keep practicing" second container-->
     <div id="secondcontainer">
-      <div class="leftcontainer">
+      <div id="hide-content" class="leftcontainer">
         <div class="banner">
           <img src="assets/images/information-main.jpg" alt="man reading book">
         </div>
@@ -85,62 +89,62 @@
       <div id="sixmajors">
         <div id="container" id="topthree" class="software">
           <div class="image">
-            <img src="assets/images/course-software.jpg" alt="software and computers">
+            <img id="hide-content" src="assets/images/course-software.jpg" alt="software and computers">
           </div>
           <div class="info">
             <h5>Software engineering</h5><br>
-            <p>COURSES</p><br>
-            <p>Web Development, Mobile Development, iOT, APIs</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
         <div id="container" id="topthree" class="computer-art">
           <div class="image">
-            <img src="assets/images/course-computer-art.jpg" alt="cell phone and coffee on table">
+            <img id="hide-content" src="assets/images/course-computer-art.jpg" alt="cell phone and coffee on table">
           </div>
           <div class="info">
             <h5>Computer art</h5><br>
-            <p>COURSES</p><br>
-            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects,<br> Computer Animation</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >Imaging & Design, Web Design, Motion Graphics & Visual Effects,<br> Computer Animation</p>
           </div>
         </div>
         <div id="container" id="topthree" class="design">
           <div class="image">
-            <img src="assets/images/course-design.jpg" alt="photographer adjusting lens">
+            <img id="hide-content" src="assets/images/course-design.jpg" alt="photographer adjusting lens">
           </div>
           <div class="info">
             <h5>Design</h5><br>
-            <p>COURSES</p><br>
-            <p>User Experience Design, User Research, Visual Design</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >User Experience Design, User Research, Visual Design</p>
           </div>
         </div>
         <div id="container" class="data">
           <div class="image">
-            <img src="assets/images/course-data.jpg" alt="laptop with graphs displayed">
+            <img id="hide-content" src="assets/images/course-data.jpg" alt="laptop with graphs displayed">
           </div>
           <div class="info">
             <h5>Data</h5><br>
-            <p>COURSES</p><br>
-            <p>Data Science, Big Data, SQL, Data Visualization</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >Data Science, Big Data, SQL, Data Visualization</p>
           </div>
         </div>
         <div id="container" class="business">
           <div class="image">
-            <img src="assets/images/course-business.jpg" alt="chess pieces on chessboard">
+            <img id="hide-content" src="assets/images/course-business.jpg" alt="chess pieces on chessboard">
           </div>
           <div class="info">
             <h5>Business</h5><br>
-            <p>COURSES</p><br>
-            <p>Product Development, Business Development, Startup</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >Product Development, Business Development, Startup</p>
           </div>
         </div>
         <div id="container" class="marketing">
           <div class="image">
-            <img src="assets/images/course-marketing.jpg" alt="person adjusting settings on iWatch">
+            <img id="hide-content" src="assets/images/course-marketing.jpg" alt="person adjusting settings on iWatch">
           </div>
           <div class="info">
             <h5>Marketing</h5><br>
-            <p>COURSES</p><br>
-            <p>Analytics, Content Marketing, Mobile Marketing</p>
+            <p id="hide-content" >COURSES</p><br>
+            <p id="hide-content" >Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
       </div>
