final commit as of now

--- a/capstone.html
+++ b/capstone.html
@@ -42,7 +42,7 @@
     <div id="secondcontainer">
       <div id="hide-content" class="leftcontainer">
         <div class="banner">
-          <img src="assets/images/information-main.jpg" alt="man reading book">
+          <img id="full-image" src="assets/images/information-main.jpg" alt="man reading book">
         </div>
         <div class="main-info">
           <h2>It doesn't hurt to keep practicing</h2><br>
@@ -52,39 +52,42 @@
       </div>
       <div class="rightcontainer">
         <div class="top">
-          <div class="image">
+          <div id="hide-content" class="image">
             <img src="assets/images/information-orientation.jpg" alt="people walking to an orientation">
           </div>
+          <img id="mobile-only" src="assets/images/information-orientation-mobile.jpg">
           <div class="information">
             <h5>Orientation Date</h5>
             <h6 class="middle-line">Tue 10/11 & Wed 10/12: 8am-3pm</h6>
-            <h6><a id="link-color" href="#"></a>Read more</h6>
+            <h6><a href="#"></a>Read more</h6>
           </div>
         </div>
         <div class="middle">
-          <div class="image">
+          <div id="hide-content" class="image">
             <img src="assets/images/information-campus.jpg" alt="picture of a room within campus">
           </div>
+          <img id="mobile-only" src="assets/images/information-campus-mobile.jpg">
           <div class="information">
             <h5>Our campus</h5>
             <h6 class="middle-line">Find which campus is close by you</h6>
-            <h6><a id="link-color" href="#"></a>Read more</h6>
+            <h6><a href="#"></a>Read more</h6>
           </div>
         </div>
         <div class="bottom">
-          <div class="image">
+          <div id="hide-content" class="image">
             <img src="assets/images/information-guest-lecture.jpg" alt="man with beard interestingly looking into distance">
           </div>
+          <img id="mobile-only" src="assets/images/information-guest-lecture-mobile.jpg">
           <div class="information">
             <h5>Our guest lecture</h5>
             <h6 class="middle-line"><em>Join a keynote with Oliver Sack about music in medical treatment<em><h6><br>
-            <h6><a id="link-color" href="#"></a>Read more</h6>
+            <h6><a href="#"></a>Read more</h6>
           </div>
         </div>
       </div>
     </div>
     <!-- "start learning" third container-->
-    <div class="thirdcontainer">
+    <div id="border" class="thirdcontainer">
       <h1>Start learning</h1>
       <div id="sixmajors">
         <div id="container" id="topthree" class="software">
@@ -150,18 +153,18 @@
       </div>
     </div>
     <!-- "Thesis exhibit" fourth container -->
-    <div class="fourthcontainer">
+    <div id="border" class="fourthcontainer">
       <h1>Thesis exhibit</h1>
       <div class="flex-row">
-        <div id="leftcontainer" class="leftcontainer">
+        <div id="leftcontainer" class="leftcontainer videocontainer">
           <video src="assets/videos/thesis.mp4" autoplay poster="posterimage.jpg"></video>
-          <div class="info">
+          <div id="hide-content" class="info">
             <h5>Reimagine urban</h5>
             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>nect consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>eget magna laoreet, efficitur dolor consequat, tristique ligula."</p><br>
           </div>
         </div>
         <div id="rightcontainer">
-          <div class="top">
+          <div id="hide-content" class="top">
             <div class="thesis-info">
               <img src="assets/images/thesis-fisma.jpg" alt="sketching ideas with paper and iphone">
             </div>
@@ -170,7 +173,7 @@
               <p>Designer showcase of new prototype product</p>
             </div>
           </div>
-          <div class="bottom">
+          <div id="hide-content" class="bottom">
             <div class="now-and-then">
               <img src="assets/images/thesis-now-and-then.jpg" alt="empire state building">
             </div>
@@ -186,7 +189,7 @@
     <!-- footer -->
     <div class="footer">
       <span>© 2016 Colmar Academy. All rights reserved</span>
-      <div class="float-right">
+      <div id="hide-content" class="float-right">
         <span>Terms</span>
         <span>Privacy</span>
       </div>
